--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "element-plus": "^2.3.9",
     "pinia": "^2.1.4",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -26,6 +28,8 @@
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
     "sass": "^1.65.1",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.4.6"
   },
   "lint-staged": {
